fix(playground): scrollbar for wide but not tall code files

--- a/src/routes/playground/tags/playground/tags/editor/editor.styles.module.scss
+++ b/src/routes/playground/tags/playground/tags/editor/editor.styles.module.scss
@@ -1,5 +1,6 @@
 #editor {
   overflow: hidden;
+  flex: 1;
 }
 
 :global {
